Fix: Assignment tab not showing on J3 Fix: Admin style

--- a/admin/widgets/expose.css
+++ b/admin/widgets/expose.css
@@ -11,10 +11,10 @@
 
 body {-webkit-tap-highlight-color: rgb(255,255,158); display: none}
 
-::selection 	 	{background: rgb(255,255,158);}
-::-moz-selection 	{background: rgb(255,255,158);}
-img::selection 		{background: transparent;}
-img::-moz-selection	{background: transparent;}
+::selection         {background: rgb(255,255,158);}
+::-moz-selection    {background: rgb(255,255,158);}
+img::selection      {background: transparent;}
+img::-moz-selection {background: transparent;}
 /* Clear Floated Elements
 -----------------------------------------------*/
 .clear {clear: both; display: block;overflow: hidden;visibility: hidden;width: 0;height: 0;}
@@ -80,6 +80,11 @@ ul.adminformlist li{border-bottom: 1px solid #eee;}
 input.picker{width: 50px !important;float: left}
 span.tips{background: url(images/icon_tips.png) no-repeat;width: 13px;height: 13px; position: absolute; top: 50%; margin-top: -7px; right: 8px;}
 .assignments span.tips{display: none;}
+/*Assignments J3 fix*/
+#assignment #jform_menuselect-lbl{ display: none; }
+#assignment label{ text-align: left; line-height: 25px; background: none; }
+#assignment span.tips{ display: none; }
+#assignment .checkbox input[type="checkbox"]{ float: none; }
 
 .highlight{
     background: #fffff3;
@@ -139,6 +144,8 @@ span.pre-text{
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+/*J3 fix*/
+#content .expose-tab-wrapper{ margin-top: 10px; }
 .expose-tab{
     width: 16%;
     float: left;
@@ -476,7 +483,7 @@ div.toolbar-list .config-btn span{
     }
 .mods-chrome a.close{
     float: right;
-	cursor:pointer;
+    cursor:pointer;
     display: inline-block;
     white-space: nowrap;
     background-color: #ccc;
@@ -998,7 +1005,7 @@ div.selector span{
 .selector,
 .selector *{
     margin: 0;
-	padding: 0;
+    padding: 0;
 }
 div.selector option {
     padding: 2px 4px;
@@ -1013,55 +1020,55 @@ div.selector {
 div.selector span {
   background-position: right 0px;
   height: 32px;
-	line-height: 32px;
+    line-height: 32px;
 }
 
 div.selector select {
   /* change these to adjust positioning of select element */
   top: 0px;
-	left: 0px;
+    left: 0px;
 }
 
 div.selector:active, 
 div.selector.active {
-	background-position: -487px -192px;
+    background-position: -487px -192px;
 }
 
 div.selector:active span, 
 div.selector.active span {
-	background-position: right -32px;
+    background-position: right -32px;
 }
 
 div.selector.focus, 
 div.selector.hover,
 div.selector:hover {
-	background-position: -487px -224px;
+    background-position: -487px -224px;
 }
 
 div.selector.focus span, 
 div.selector.hover span, 
 div.selector:hover span {
-	background-position: right -64px;
+    background-position: right -64px;
 }
 
 div.selector.focus:active,
 div.selector.focus.active,
 div.selector:hover:active,
 div.selector.active:hover {
-	background-position: -487px -256px;
+    background-position: -487px -256px;
 }
 
 div.selector.focus:active span,
 div.selector:hover:active span,
 div.selector.active:hover span,
 div.selector.focus.active span {
-	background-position: right -96px;
+    background-position: right -96px;
 }
 
 div.selector.disabled,
 div.selector.disabled:active,
 div.selector.disabled.active {
-	background-position: -487px -288px;
+    background-position: -487px -288px;
 }
 
 div.selector.disabled span,
@@ -1071,8 +1078,8 @@ div.selector.disabled.active span {
 }
 div.selector select {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 1em;
-	border: solid 1px #fff;
+    font-size: 1em;
+    border: solid 1px #fff;
 }
 
 div.selector span {
@@ -1086,7 +1093,7 @@ div.selector span {
 }
 
 div.selector.disabled span {
-	color: #bbb;
+    color: #bbb;
 }
 
 .selector select:focus{
@@ -1094,22 +1101,22 @@ div.selector.disabled span {
 }
 
 div.selector {
-	position: relative;
-	padding-left: 6px;
-	overflow: hidden;
+    position: relative;
+    padding-left: 6px;
+    overflow: hidden;
 }
 
 div.selector span {
-	display: block;
-	float: left;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+    display: block;
+    float: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 div.selector select {
-	position: absolute;
-	opacity: 0;
+    position: absolute;
+    opacity: 0;
     height: 25px;
     border: none;
     background: none;
